--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,21 @@
 {
-    "manifest_version": 2,
-    "name": "Website Time Tracker",
-    "version": "1.1",
-    "description": "Tracks time spent on websites in real-time",
-    "permissions": [
-      "tabs",
-      "storage",
-      "activeTab"
-    ],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "browser_action": {
-      "default_popup": "popup.html"
-    },
-    "icons": {
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+  "manifest_version": 3,
+  "name": "Website Time Tracker",
+  "version": "1.2",
+  "description": "Tracks time spent on websites in real-time",
+  "permissions": [
+    "tabs",
+    "storage",
+    "alarms"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
+}
